# tauri-sample-test

./: .gitignore  Readme.md  package.json
docs/: quickstart.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: build.rs
