[package]
name = "tauri-sample"
version = "0.1.0"
description = "A Tauri App"
authors = [ "Deepzima <aspha9@outlook.it>" ]
license = ""
repository = ""
default-run = "tauri-sample"
edition = "2018"
build = "src/build.rs"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = [ "derive" ] }
tauri = { version = "0.11", features = [ "all-api" ] }

[target."cfg(windows)".build-dependencies]
winres = "0.1"

[features]
embedded-server = [ "tauri/embedded-server" ]
no-server = [ "tauri/no-server" ]

[[bin]]
name = "tauri-sample"
path = "src/main.rs"
